--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="landing-page" id="landing-page" tabindex="1" >
 		<div class="main-title">9EED's website</div>
 		<a tabindex="-1" href="#about-me" class="down">
-			<img src="./files/images/ui/down.png" alt="down">
+			<img src="./files/images/ui/down.png" alt="picture of down">
 		</a>
 	</div>
 
@@ -106,7 +106,7 @@
 								2D gravity simulator
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/2D gravity.png" alt="2D gravity simulator" />
+								<img class="six-celled-cell-image" src="./files/images/projects/2D gravity.png" alt="picture of 2D gravity simulator" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/chess-2.0/" target="_blank" class="six-celled-cell">
@@ -114,7 +114,7 @@
 								chess 2.0
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/chess 2.0.png" alt="chess 2.0" />
+								<img class="six-celled-cell-image" src="./files/images/projects/chess 2.0.png" alt="picture of chess 2.0" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://github.com/9EED/superbox-3.5" target="_blank" class="six-celled-cell">
@@ -122,15 +122,15 @@
 								super-box 3.5
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/super-box3.0.png" alt="super-box 3.5" />
+								<img class="six-celled-cell-image" src="./files/images/projects/super-box3.0.png" alt="picture of super-box 3.5" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://github.com/9EED/interactive-mandelbrot-shader" target="_blank" class="six-celled-cell">
+						<a tabindex="-1" href="https://9eed.github.io/particle-life-js/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
-								interactive mandelbrot shader
+								particle life
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/mandel.png" alt="interactive mandelbrot fractal" />
+								<img class="six-celled-cell-image" src="./files/images/projects/particle life.png" alt="picture of particle life" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
@@ -138,7 +138,7 @@
 								super-box
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="super-box" />
+								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="picture of super-box" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/projects" target="_blank" class="six-celled-cell" id="all">
@@ -155,7 +155,7 @@
 			<div class="four-celled">
 				<a tabindex="-1" class="four-celled-cell" href="mailto:zeghdns@gmail.com" >
 					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/email.png" alt="email">
+						<img src="./files/images/contacts/email.png" alt="picture of email">
 					</div>
 					<div class="four-celled-cell-title">email</div>
 					<div class="four-celled-cell-details">
@@ -164,7 +164,7 @@
 				</a>
 				<a tabindex="-1" class="four-celled-cell" href="https://discord.com/app" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/discord.png" alt="discord">
+						<img src="./files/images/contacts/discord.png" alt="picture of discord">
 					</div>
 					<div class="four-celled-cell-title">discord</div>
 					<div class="four-celled-cell-details">
@@ -173,7 +173,7 @@
 				</a>				
 				<a tabindex="-1" class="four-celled-cell" href="https://github.com/9EED" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/github.png" alt="github">
+						<img src="./files/images/contacts/github.png" alt="picture of github">
 					</div>
 					<div class="four-celled-cell-title">github</div>
 					<div class="four-celled-cell-details">
@@ -182,7 +182,7 @@
 				</a>
 				<a tabindex="-1" class="four-celled-cell" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/instagram.png" alt="instagram">
+						<img src="./files/images/contacts/instagram.png" alt="picture of instagram">
 					</div>
 					<div class="four-celled-cell-title">instagram</div>
 					<div class="four-celled-cell-details">
