Updated discord and college

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="paragraph-container">
 			<div class="paragraph-title">about me</div>
 			<div class="paragraph">
-				Hello, I am 9EED (pronunced Nined). I'm a programmer, an artist and, a high-school student from Algeria.
+				Hello, I am 9EED (pronunced Nined). I'm a programmer, an artist and, a college student from Algeria.
 			</div>
 		</div>
 	</div>
@@ -168,7 +168,7 @@
 					</div>
 					<div class="four-celled-cell-title">discord</div>
 					<div class="four-celled-cell-details">
-						9EED#4153
+						@NINEED
 					</div>
 				</a>				
 				<a tabindex="-1" class="four-celled-cell" href="https://github.com/9EED" target="_blank">
