--- a/index.html
+++ b/index.html
@@ -1,201 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="./files/styles/style.css">
-	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
-	<title>9EED's website</title>
-	<meta charset="UTF-8" />
-	<meta name="description" content="9EED's professional personal website">
-	<meta name="author" content="9EED" />
-	<meta property="og:image" content="./files/images/9.png" />
-	<script defer src="./files/scripts/script.js"></script>
-	<script defer src="./files/scripts/style.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/style.css">
+    <script src="./src/script.js" defer></script>
+    <title>9EED's website</title>
 </head>
 <body>
-
-  	<div id="background">
-		  <canvas id='canvas'></canvas>
-	</div>
-
-	<div class="nav-bar">
-		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
-		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
-		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
-		<a class="nav-bar-item" id="mode-switch"><img src="./files/images/ui/sun.svg"></a>
-	</div>
-
-	<div class="nav-list">
-		<img src="./files/images/ui/menu.png">
-		<div class="list">
-			<div class="list-title">shortcuts</div>
-			<a class="list-item" href="#landing-page">landing page</a>
-			<a class="list-item" href="#about-me">about me</a>
-			<a class="list-item" href="#skill-set">skill set</a>
-			<a class="list-item" href="#projects">projects</a>
-			<a class="list-item" href="#contacts">contacts</a>
-			<a class="list-item" href="#footer">footer</a>
-		</div>
-	</div>
-
-	<div class="landing-page" id="landing-page" tabindex="1" >
-		<div class="main-title">9EED's website</div>
-		<a tabindex="-1" href="#about-me" class="down">
-			<img src="./files/images/ui/down.png" alt="picture of down">
-		</a>
-	</div>
-
-	<div class="paragraph-page" id="about-me" tabindex="2" >
-		<div class="paragraph-container">
-			<div class="paragraph-title">about me</div>
-			<div class="paragraph">
-				Hello, I am 9EED (pronunced Nined). I'm a programmer, an artist and, a college student from Algeria.
-			</div>
-		</div>
-	</div>
-
-	<div class="four-celled-page" id="skill-set" tabindex="3" >
-		<div class="four-celled-container">
-			<div class="four-celled-title">skill set</div>
-			<div class="four-celled">
-				<a href="https://github.com/9EED" target="_blank" tabindex="-1" class="four-celled-cell">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/skills/web.png">
-					</div>
-					<div class="four-celled-cell-title">Web Dev</div>
-					<div class="four-celled-cell-details">
-						designing websites using HTML CSS and JavaScript
-					</div>
-				</a>
-				<a href="https://github.com/9EED" target="_blank" tabindex="-1" class="four-celled-cell">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/skills/bug.png">
-					</div>
-					<div class="four-celled-cell-title">Code</div>
-					<div class="four-celled-cell-details">
-						writting algorithms and programming simulations is my main thing
-					</div>
-				</a>
-				<a href="#" tabindex="-1" class="four-celled-cell">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/skills/drawing.png">
-					</div>
-					<div class="four-celled-cell-title">Drawing</div>
-					<div class="four-celled-cell-details">
-						pencil and pen drawings on paper
-					</div>
-				</a>
-				<a href="./files/pages/3D.html" tabindex="-1" class="four-celled-cell">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/skills/3d.png">
-					</div>
-					<div class="four-celled-cell-title">3D Animation</div>
-					<div class="four-celled-cell-details">
-						3D animation and modeling using Blender
-					</div>
-				</a>
-			</div>
-		</div>
-	</div>
-
-	<div class="six-celled-page" id="projects" tabindex="4" >
-			<div class="six-celled-container">
-				<div class="six-celled">
-					<div class="six-celled-title">latest projects</div>
-					<div class="six-celled-grid">
-						<a tabindex="-1" href="https://github.com/9EED/2D-gravity" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								2D gravity simulator
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/2D gravity.png" alt="picture of 2D gravity simulator" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9eed.github.io/chess-2.0/" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								chess 2.0
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/chess 2.0.png" alt="picture of chess 2.0" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://github.com/9EED/superbox-3.5" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								super-box 3.5
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/super-box3.0.png" alt="picture of super-box 3.5" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9eed.github.io/particle-life-js/" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								particle life
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/particle life.png" alt="picture of particle life" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
-							<div class="six-celled-cell-title">
-								super-box
-							</div>
-							<div class="six-celled-cell-image-holder" >
-								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="picture of super-box" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9EED.github.io/projects" target="_blank" class="six-celled-cell" id="all">
-							more >
-						</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="four-celled-page" id="contacts" tabindex="5" >
-		<div class="four-celled-container">
-			<div class="four-celled-title">contacts</div>
-			<div class="four-celled">
-				<a tabindex="-1" class="four-celled-cell" href="mailto:zeghdns@gmail.com" >
-					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/email.png" alt="picture of email">
-					</div>
-					<div class="four-celled-cell-title">email</div>
-					<div class="four-celled-cell-details">
-						zeghdns@gmail.com
-					</div>
-				</a>
-				<a tabindex="-1" class="four-celled-cell" href="https://discord.com/app" target="_blank">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/discord.png" alt="picture of discord">
-					</div>
-					<div class="four-celled-cell-title">discord</div>
-					<div class="four-celled-cell-details">
-						@NINEED
-					</div>
-				</a>				
-				<a tabindex="-1" class="four-celled-cell" href="https://github.com/9EED" target="_blank">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/github.png" alt="picture of github">
-					</div>
-					<div class="four-celled-cell-title">github</div>
-					<div class="four-celled-cell-details">
-						@9EED
-					</div>
-				</a>
-				<a tabindex="-1" class="four-celled-cell" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
-					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/instagram.png" alt="picture of instagram">
-					</div>
-					<div class="four-celled-cell-title">instagram</div>
-					<div class="four-celled-cell-details">
-						@salah.zeghdani
-					</div>
-				</a>
-			</div>
-		</div>
-	</div>
-
-	<footer class="footer" id="footer" tabindex="6">
-		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
-		<div>made by me <a href="https://9EED.github.io./" tabindex="-1" class="link" >9EED</a></div>
-	</footer>
-
+    fresh start
 </body>
+</html>
