started work inspired by pinterest

--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <title>9EED's website</title>
 </head>
 <body>
-    fresh start
+    <nav id="nav-bar">
+        <a class="nav-item" href="./index.html" id="home-nav">
+            <img src="./src/icons/home.svg" alt="home button">
+        </a>
+        <a class="nav-item" href="#">home</a>
+        <a class="nav-item" href="#">portfolio</a>
+        <a class="nav-item" href="#">gallery</a>
+        <a class="nav-item" href="#">contacts</a>
+    </nav>
+    <div id="landing">
+        <img src="./src/images/cut-out.png" alt="a cut-out picture of me" id="cut-out"/>
+        <div id="landing-left">
+            <div id="landing-name">
+                Zeghdani<span>.</span><br>
+                salah<span>_</span>eddine<span>.</span>
+            </div>
+            <hr>
+            <div id="landing-contacts">
+                <a href="#">instagram</a>,
+                <a href="#">linkedin</a>,
+                <a href="#">discord</a>,
+                <a href="#">github</a>,
+                <a href="#">+</a>
+            </div>
+            <div id="landing-more-contacts">all contacts</div>
+        </div>
+        <div id="landing-right">
+            <div id="landing-introduction">introduction</div>
+            <div id="landing-paragraph-title">
+                title title title <br>
+                title title title title  
+            </div>
+            <div id="landing-paragraph">
+                paragraph paragraph paragraph paragraph paragraph <br>
+                paragraph paragraph paragraph paragraph paragraph <br> 
+            </div>
+            <div id="landing-learn-more">learn more</div>
+        </div>
+    </div>
+    there is more <br>
+    there is more <br>
+    there is more <br>
+    there is more <br>
+    there is more <br>
+    there is more <br>
 </body>
 </html>
