finished landing page

--- a/index.html
+++ b/index.html
@@ -30,29 +30,21 @@
                 <a href="#">instagram</a>,
                 <a href="#">linkedin</a>,
                 <a href="#">discord</a>,
-                <a href="#">github</a>,
-                <a href="#">+</a>
+                <a href="#">github</a>...
             </div>
-            <div id="landing-more-contacts">all contacts</div>
+            <a id="landing-more-contacts" href="#">all contacts</a>
         </div>
         <div id="landing-right">
             <div id="landing-introduction">introduction</div>
             <div id="landing-paragraph-title">
-                title title title <br>
-                title title title title  
+                web <span>&&</span> software developer<span>,</span><br>
+                college student<span>:</span>
             </div>
             <div id="landing-paragraph">
-                paragraph paragraph paragraph paragraph paragraph <br>
-                paragraph paragraph paragraph paragraph paragraph <br> 
+                &nbsp&nbsp state engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
             </div>
-            <div id="landing-learn-more">learn more</div>
+            <a id="landing-learn-more">learn more</a>
         </div>
+        <a id="landing-scroller" href="#">scroll down</a>
     </div>
-    there is more <br>
-    there is more <br>
-    there is more <br>
-    there is more <br>
-    there is more <br>
-    there is more <br>
-</body>
 </html>
