--- a/index.html
+++ b/index.html
@@ -45,6 +45,62 @@
             </div>
             <a id="landing-learn-more">learn more</a>
         </div>
-        <a id="landing-scroller" href="#">scroll down</a>
+        <a id="landing-scroller" href="#cards-page">scroll down</a>
     </div>
+    <div id="cards-page">
+        <div class="cards-title">hobbies</div>
+        <div class="card-collection-description">hobbies i enjoy and practice everyday.</div>
+        <div class="cards-collection">
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+        </div>
+        <div class="cards-title">certificates</div>
+        <div class="card-collection-description">some of the certificates and awards i have accumilated over the years.</div>
+        <div class="cards-collection">
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+            <div class="card">
+                <img class="card-image" />
+                <div class="card-name">card x</div>
+                <div class="card-description"> card x description and stuff</div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
