--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a class="nav-item" href="./index.html" id="home-nav">
             <img src="./src/icons/home.svg" alt="home button">
         </a>
-        <a class="nav-item" href="#">home</a>
-        <a class="nav-item" href="#">portfolio</a>
+        <a class="nav-item" href="#">landing</a>
+        <a class="nav-item" href="#">about-me</a>
         <a class="nav-item" href="#">gallery</a>
         <a class="nav-item" href="#">contacts</a>
     </nav>
@@ -37,11 +37,10 @@
         <div id="landing-right">
             <div id="landing-introduction">introduction</div>
             <div id="landing-paragraph-title">
-                web <span>&&</span> software developer<span>,</span><br>
-                college student<span>:</span>
+                computer science <span>&&</span> softweare development<span>:</span>
             </div>
             <div id="landing-paragraph">
-                &nbsp&nbsp state engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
+                &nbsp&nbsp State engineer of computer science and information technology in the making at the university of science and technology houari boumediene <a href="https://www.usthb.dz/" target="_blank"> usthb </a>.
             </div>
             <a id="landing-learn-more">learn more</a>
         </div>
@@ -52,55 +51,127 @@
         <div class="card-collection-description">hobbies i enjoy and practice everyday.</div>
         <div class="cards-collection">
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/internet.svg" class="card-image" alt="web dev icon" />
+                <div class="card-title">web development</div>
+                <div class="card-description">
+                    developing sites such<br>
+                    as this one for the web <br>
+                    using HTML CSS && JavaScript.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/app-window.svg" class="card-image" alt="application window icon" />
+                <div class="card-title">software development</div>
+                <div class="card-description">
+                    creating applications and games <br>
+                    mostly from scratch<br>
+                    using C && Python.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/lamp.svg" class="card-image" alt="lamp icon" />
+                <div class="card-title">studying</div>
+                <div class="card-description">
+                    I'm still a student so I have to!<br>
+                    altough I really enjoy studying <br> Mathemathics and casually learning <br>
+                    new things.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/dumbbell.svg" class="card-image" alt="dumbell icon" />
+                <div class="card-title">exercise</div>
+                <div class="card-description"> 
+                    I consistently exercise mostly<br>
+                    for health reasons, but also<br>
+                    because it's fun!
+                </div>
+            </div>
+        </div>
+        <div class="cards-title">languages && technologies</div>
+        <div class="card-collection-description">coding languages and technologies I am proficient at and can use to build things.</div>
+        <div class="cards-collection">
+            <div class="card">
+                <img src="/src/icons/web-dev.svg" class="card-image" alt="image of web-dev" />
+                <div class="card-title">HTML && CSS && JS</div>
+                <div class="card-description">
+                    the vanilla taste of website<br>
+                    development, you can never<br>
+                    underestimate the power of<br>
+                    the basics.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/pyramid.svg" class="card-image" alt="Python logo" />
+                <div class="card-title">Python</div>
+                <div class="card-description">
+                    simple, quick and easy<br>
+                    Python allows me to create demos<br>
+                    or even full apps in record times.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/C.png" class="card-image" alt="C logo" />
+                <div class="card-title">C / C++</div>
+                <div class="card-description">
+                    mother of programming languages<br>
+                    I had to learn them for school and<br>
+                    fell in love with the efficency.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/terminal.svg" class="card-image" alt="terminal icon" />
+                <div class="card-title">Node.js / Express.js</div>
+                <div class="card-description">
+                    reliable back end framework<br>
+                    suitable for most web apps.<br>
+                    and server applications.
+                </div>
+            </div>
+            <div class="card">
+                <img src="/src/icons/raylib.png" class="card-image" alt="raylib icon" />
+                <div class="card-title">raylib</div>
+                <div class="card-description">
+                    with so many ports this simple <br>
+                    game making framework allows <br>
+                    me to create games in Python && C.
+                </div>
             </div>
         </div>
         <div class="cards-title">certificates</div>
         <div class="card-collection-description">some of the certificates and awards i have accumilated over the years.</div>
         <div class="cards-collection">
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/freecodecamp.png" class="card-image" alt="image of card x" />
+                <div class="card-title">responsive web design</div>
+                <div class="card-description">
+                    300 hours of course work <br> at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online <br> platform, on HTML && CSS.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/freecodecamp.png" class="card-image" alt="image of card x" />
+                <div class="card-title">JavaScript Algorithms and Data Structures</div>
+                <div class="card-description">
+                    300 hours of course work <br> at <a href="http://freeCodeCamp.org" target="_blank">freeCodeCamp.org</a> online <br> platform, on JavaScript.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/codingame.png" class="card-image" alt="codingame logo" />
+                <div class="card-title"> Python 3 certification </div>
+                <div class="card-description">
+                    passed the <a href="https://www.codingame.com">codingame.com</a> Python 3 certification test. with a score of 80%.
+                </div>
             </div>
             <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
-            </div>
-            <div class="card">
-                <img class="card-image" />
-                <div class="card-name">card x</div>
-                <div class="card-description"> card x description and stuff</div>
+                <img src="/src/icons/codingame.png" class="card-image" alt="codingame logo" />
+                <div class="card-title">JavaScript Certification</div>
+                <div class="card-description">
+                    passed the <a href="https://www.codingame.com">codingame.com</a> JavaScript certification test. with a 100% score and honors.
+                </div>
             </div>
         </div>
     </div>
+    <div id="latest-works"></div>
+    <div id="contacts"></div>
+    <div id="footer"></div>
 </body>
 </html>
