latest works template done

--- a/index.html
+++ b/index.html
@@ -170,7 +170,87 @@
             </div>
         </div>
     </div>
-    <div id="latest-works"></div>
+    <div id="latest-works">
+        <div id="latest-works-title">latest works</div>
+        <div id="latest-works-description">The latest Projects I have worked on.</div>
+        <div id="latest-works-collection">
+            <div class="work-large">
+                <div class="work-image">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </div>
+                <div class="work-title">title goes here</div>
+                <div class="work-description">
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes.
+                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">69 dec 2023</div>
+            </div>
+            <div class="work-large">
+                <div class="work-image">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </div>
+                <div class="work-title">title goes here</div>
+                <div class="work-description">
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes here,
+                    work description goes.
+                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">69 dec 2023</div>
+            </div>
+            <div class="work-small">
+                <div class="work-image">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </div>
+                <div class="work-title">title goes here</div>
+                <div class="work-description">
+                    work description goes here,
+                    work description goes here,
+                    work description goes.
+                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">69 dec 2023</div>
+            </div>
+            <div class="work-small">
+                <div class="work-image">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </div>
+                <div class="work-title">title goes here</div>
+                <div class="work-description">
+                    work description goes here,
+                    work description goes here,
+                    work description goes.
+                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">69 dec 2023</div>
+            </div>
+            <div class="work-small">
+                <div class="work-image">
+                    <img src="/src/images/photo.avif" alt="image of project x">
+                </div>
+                <div class="work-title">gallery</div>
+                <div class="work-description">
+                    work description goes here,
+                    work description goes here,
+                    work description goes.
+                    <a href="#" target="_blank">visit <img src="/src/icons/link.svg" /></a>
+                </div>
+                <div class="date">69 dec 2023</div>
+            </div>
+        </div>
+    </div>
     <div id="contacts"></div>
     <div id="footer"></div>
 </body>
