--- a/index.html
+++ b/index.html
@@ -251,7 +251,44 @@
             </div>
         </div>
     </div>
-    <div id="contacts"></div>
+    <div id="contacts-page">
+        <div id="contacts-title">contacts</div>
+        <div id="contacts-description">You can reach me through these:</div>
+        <div id="contacts-collection">
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Email
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Instagram
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> FaceBook
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Discord
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> linkedn
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Github
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Telegram
+                <img src="src/icons/link.svg">
+            </a>
+            <a class="contact" href="#" target="_blank">
+                <span>.</span> Github
+                <img src="src/icons/link.svg">
+            </a>
+        </div>
+    </div>
     <div id="footer"></div>
 </body>
 </html>
